# safeio

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
